# forecast

./: .env.example  Dockerfile  README.md  pyproject.toml  task-definition.json
.github/workflows/: workflow.yaml
forecast/: auth.py  config.py  dependency.py  main.py
forecast/articles/: enums.py  llm.py  router.py  schemas.py  service.py
