[project]
name = "forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "langchain>=0.3.11",
    "langchain-openai>=0.2.12",
    "loguru>=0.7.3",
    "pydantic-extra-types>=2.10.1",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
]
